[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.16"
syn = { version = "1.0.89", features = ["full", "extra-traits"] }

[dependencies.serenity]
default-features = true
version = "0.10"

# Serenity features might change, although for now we are going 
# to use these, and then check whether we still need them or not
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
